--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+It's okay. We all make mistakes. Click on one of the links above or to your left to return to safety.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
